Add custom appbar.

--- a/app/src/main/res/layout/csvimport_layout.xml
+++ b/app/src/main/res/layout/csvimport_layout.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/list"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" 
-    android:text="@string/file_list_title" >
+    android:layout_height="match_parent">
 
-    
-</ListView>
+    <include layout="@layout/toolbar" />
+
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
+        android:text="@string/file_list_title" />
+</RelativeLayout>
