--- a/app/src/main/res/layout/activity_gdrive_upload.xml
+++ b/app/src/main/res/layout/activity_gdrive_upload.xml
@@ -1,77 +1,79 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:orientation="vertical" >
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/fullscreen_cloud_export"
+    <include layout="@layout/toolbar" />
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#33b5e5"
-        android:textSize="25sp"
-	    android:layout_marginStart="6dp"
-        android:layout_marginLeft="6dp"
-        android:textStyle="bold" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
+        android:orientation="vertical">
 
-    <LinearLayout
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:orientation="horizontal" >
+        <TextView
+            android:id="@+id/fullscreen_cloud_export"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:textColor="#33b5e5"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
-		<TextView  
-	        android:id="@+id/xmlExportTextLine"
-	        android:layout_weight="1"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content" 
-	        android:textSize="22sp"
-	        android:text="@string/xmlExport_text"
-	        android:singleLine="true"
-	        android:layout_marginTop="6dp"
-	    	android:layout_marginStart="6dp"
-	        android:layout_marginLeft="6dp" />
-         
-         <TextView  
-	        android:id="@+id/xmlExportValueLine"
-	        android:layout_weight="2"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content" 
-	        android:textSize="22sp"
-	        android:textStyle="bold"
-	        android:singleLine="true"
-	        android:layout_marginTop="6dp"
-	    	android:layout_marginStart="6dp"
-	        android:layout_marginLeft="6dp" />
-     </LinearLayout>
-     
-    <LinearLayout
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:orientation="horizontal" >
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-		<TextView  
-	        android:id="@+id/cloudExportTextLine"
-	        android:layout_weight="1"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content" 
-	        android:textSize="22sp"
-	        android:text="@string/cloudExport_text"
-	        android:singleLine="true"
-	        android:layout_marginTop="6dp"
-	    	android:layout_marginStart="6dp"
-	        android:layout_marginLeft="6dp" />
-         
-         <TextView  
-	        android:id="@+id/cloudExportValueLine"
-	        android:layout_weight="2"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content" 
-	        android:textSize="22sp"
-	        android:textStyle="bold"
-	        android:singleLine="true"
-	        android:layout_marginTop="6dp"
-	    	android:layout_marginStart="6dp"
-	        android:layout_marginLeft="6dp" />
-     </LinearLayout>
+            <TextView
+                android:id="@+id/xmlExportTextLine"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="6dp"
+                android:layout_weight="1"
+                android:singleLine="true"
+                android:text="@string/xmlExport_text"
+                android:textSize="22sp" />
 
-</LinearLayout>
+            <TextView
+                android:id="@+id/xmlExportValueLine"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="6dp"
+                android:layout_weight="2"
+                android:singleLine="true"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/cloudExportTextLine"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="6dp"
+                android:layout_weight="1"
+                android:singleLine="true"
+                android:text="@string/cloudExport_text"
+                android:textSize="22sp" />
+
+            <TextView
+                android:id="@+id/cloudExportValueLine"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="6dp"
+                android:layout_weight="2"
+                android:singleLine="true"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+    </LinearLayout>
+</RelativeLayout>
