--- a/app/src/main/res/layout/inputform_consumption.xml
+++ b/app/src/main/res/layout/inputform_consumption.xml
@@ -1,110 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".ConsumptionInputActivity">
 
     <include layout="@layout/toolbar" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar">
+        android:layout_height="match_parent">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/addconsumption_content"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:lineSpacingExtra="10sp"
-                android:text="@string/cons_input_header"
-                android:textColor="#33b5e5"
-                android:textSize="30sp"
-                android:textStyle="bold" />
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/textViewDateLine"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/addconsumption_content"
-                android:layout_marginStart="5dp"
-                android:text="@string/date_picker_header"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/datumTextLine"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/cons_date_hint"
+                    android:imeOptions="actionNext"
+                    android:inputType="date"/>
 
-            <EditText
-                android:id="@+id/datumTextLine"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textViewDateLine"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="6dp"
-                android:hint="@string/cons_date_hint"
-                android:inputType="date"
-                android:textSize="22sp"
-                android:textStyle="bold" />
+            </android.support.design.widget.TextInputLayout>
 
-            <TextView
-                android:id="@+id/textViewKmInput"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/datumTextLine"
-                android:layout_marginStart="5dp"
-                android:text="@string/km_input_header"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/cons_km_input"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textViewKmInput"
-                android:digits="0123456789"
-                android:hint="@string/cons_km_hint"
-                android:imeOptions="actionNext"
-                android:inputType="number" />
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/cons_km_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/cons_km_hint"
+                    android:digits="0123456789"
+                    android:imeOptions="actionNext"
+                    android:inputType="number"/>
 
-            <TextView
-                android:id="@+id/textViewLiterInput"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/cons_km_input"
-                android:layout_marginStart="5dp"
-                android:text="@string/liter_input_header"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+            </android.support.design.widget.TextInputLayout>
 
-            <EditText
-                android:id="@+id/cons_liter_input"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textViewLiterInput"
-                android:hint="@string/cons_liter_hint"
-                android:imeOptions="actionNext"
-                android:inputType="numberDecimal" />
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/textViewPriceInput"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/cons_liter_input"
-                android:layout_marginStart="5dp"
-                android:text="@string/price_input_header"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/cons_liter_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/cons_liter_hint"
+                    android:imeOptions="actionNext"
+                    android:inputType="numberDecimal"/>
 
-            <EditText
-                android:id="@+id/cons_price_input"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textViewPriceInput"
-                android:hint="@string/cons_price_hint"
-                android:imeOptions="actionDone"
-                android:inputType="numberDecimal" />
-        </RelativeLayout>
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/cons_price_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/cons_price_hint"
+                    android:imeOptions="actionDone"
+                    android:inputType="numberDecimal"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
     </ScrollView>
-</RelativeLayout>
+</LinearLayout>
