--- a/app/src/main/res/layout/inputform_car.xml
+++ b/app/src/main/res/layout/inputform_car.xml
@@ -1,132 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".CarInputActivity">
 
-    <include layout="@layout/toolbar"/>
+    <include layout="@layout/toolbar" />
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@+id/toolbar">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/addcar_content"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:lineSpacingExtra="10sp"
-                android:text="@string/car_input_header"
-                android:textColor="#33b5e5"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/spinnerBrand"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/addcar_content"
-                android:layout_marginStart="5dp"
-                android:text="@string/brand_spinner_header"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <Spinner
+            <fr.ganfra.materialspinner.MaterialSpinner
                 android:id="@+id/brand_spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/spinnerBrand" />
-
-            <TextView
-                android:id="@+id/textViewCarType"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/brand_spinner"
-                android:layout_marginStart="5dp"
-                android:text="@string/car_type_header"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/car_type_input"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/textViewCarType"
-                android:hint="@string/car_type_hint"
                 android:imeOptions="actionNext"
-                android:inputType="textNoSuggestions"
-                android:lineSpacingExtra="10sp"
-                android:textSize="25sp" />
+                app:ms_hint="@string/brand_spinner_header"
+                app:ms_highlightColor="@color/secondaryColor"
+                app:ms_floatingLabelColor="@color/secondaryColor" />
 
-            <TextView
-                android:id="@+id/textViewNumberPlate"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/car_type_input"
-                android:layout_marginStart="5dp"
-                android:text="@string/number_plate_header"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/car_numberplate_input"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/textViewNumberPlate"
-                android:hint="@string/car_numberplate_hint"
-                android:imeOptions="actionNext"
-                android:inputType="textNoSuggestions"
-                android:lineSpacingExtra="10sp"
-                android:textSize="25sp" />
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/textViewStartKm"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/car_numberplate_input"
-                android:layout_marginStart="5dp"
-                android:text="@string/start_km_header"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/car_type_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/car_type_hint"
+                    android:imeOptions="actionNext"
+                    android:inputType="textNoSuggestions" />
 
-            <EditText
-                android:id="@+id/car_startkm_input"
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/textViewStartKm"
-                android:digits="0123456789"
-                android:hint="@string/car_startkm_hint"
-                android:imeOptions="actionDone"
-                android:inputType="number"
-                android:lineSpacingExtra="10sp"
-                android:textSize="25sp" />
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/spinnerFuelType"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/car_startkm_input"
-                android:layout_marginStart="5dp"
-                android:text="@string/fueltype_spinner_header"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/car_numberplate_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/car_numberplate_hint"
+                    android:imeOptions="actionNext"
+                    android:inputType="textNoSuggestions" />
 
-            <Spinner
+            </android.support.design.widget.TextInputLayout>
+
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/car_startkm_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/car_startkm_hint"
+                    android:imeOptions="actionDone"
+                    android:inputType="number" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <fr.ganfra.materialspinner.MaterialSpinner
                 android:id="@+id/fueltypes_spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/spinnerFuelType" />
-        </RelativeLayout>
+                android:imeOptions="actionDone"
+                app:ms_hint="@string/fueltype_spinner_header"
+                app:ms_highlightColor="@color/secondaryColor"
+                app:ms_floatingLabelColor="@color/secondaryColor" />
+        </LinearLayout>
 
     </ScrollView>
-</RelativeLayout>
+</LinearLayout>
