--- a/app/src/main/res/layout/activity_collection_import.xml
+++ b/app/src/main/res/layout/activity_collection_import.xml
@@ -7,7 +7,7 @@
 
     <include layout="@layout/toolbar" />
 
-    <androidx.viewpager.widget.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,7 +18,6 @@
         titles for adjacent pages.
         -->
         <androidx.viewpager.widget.PagerTitleStrip
-            android:id="@+id/pager_title_strip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
