--- a/app/src/main/res/layout/activity_gdrive_upload.xml
+++ b/app/src/main/res/layout/activity_gdrive_upload.xml
@@ -4,14 +4,13 @@
 
     <include layout="@layout/toolbar" />
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/fullscreen_cloud_export"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
@@ -25,7 +24,6 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/xmlExportTextLine"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
@@ -53,7 +51,6 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/cloudExportTextLine"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
