--- a/app/src/main/res/layout/csvimport_layout.xml
+++ b/app/src/main/res/layout/csvimport_layout.xml
@@ -5,7 +5,7 @@
 
     <include layout="@layout/toolbar" />
 
-    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
