--- a/app/src/main/res/layout/inputform_car.xml
+++ b/app/src/main/res/layout/inputform_car.xml
@@ -9,7 +9,7 @@
 
     <include layout="@layout/toolbar" />
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
